# django_delights

./: LICENSE  README.md  pyproject.toml
django_delights/: settings.py  urls.py
inventory/: admin.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py
inventory/templates/: base.html
inventory/templates/inventory/: home.html
